# kres

./: CLAUDE.md  Cargo.toml  README.md
.githooks/: commit-msg
configs/: settings.json
configs/prompts/: bug-summary-markdown.md  commit-kernel-template.md  export-metadata.yaml  fast-code-agent.system.md  fix-template.md  main-agent.system.md  review-template.md  slow-code-agent-audit.system.md  slow-code-agent-coding.system.md  slow-code-agent-generic.system.md  slow-code-agent.system.md  triage-template.md
docs/: action-allowlist.md  agents.md  cli.md  coding-tasks.md  commands.md  configuration.md  development.md  exporting.md  findings-json-format.md  review-prompts.md  review-template.md  semcode.md  summary.md  turns-and-follow.md
kres/: Cargo.toml
kres-agents/src/: config.rs  consolidate.rs  embedded_prompts.rs  fetcher.rs  goal.rs  lib.rs  main_agent.rs  merge.rs  pipeline.rs  promote.rs  response.rs  todo_agent.rs  tools.rs  user_commands.rs
kres-agents/src/prompts/: goal.txt
kres-core/: Cargo.toml
kres-core/src/: consent.rs  findings.rs  io.rs  lib.rs  mode.rs  plan.rs  shrink.rs  task.rs
kres-llm/src/: client.rs
kres-repl/: Cargo.toml
kres-repl/src/: commands.rs  export.rs  lib.rs  report.rs  session.rs  settings.rs  summary.rs  tui.rs
kres/src/: main.rs
scripts/: export-README.md  findings-index.py  xargs-timeout.py
skills/: kernel.md
