[workspace]
resolver = "2"
members = [
    "kres",
    "kres-core",
    "kres-llm",
    "kres-mcp",
    "kres-agents",
    "kres-repl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/clm/kres"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# HTTP + streaming
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
    "gzip",
] }
eventsource-stream = "0.2"
bytes = "1"

# Serde + JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Error + logging
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
once_cell = "1"
dirs = "5"
owo-colors = "4"
uuid = { version = "1", features = ["v4", "v5"] }
# cancellation tokens for graceful shutdown (C2/C3/H7 in bugs.md)
tokio-stream = "0.1"

[workspace.dependencies.kres-core]
path = "kres-core"
[workspace.dependencies.kres-llm]
path = "kres-llm"
[workspace.dependencies.kres-mcp]
path = "kres-mcp"
[workspace.dependencies.kres-agents]
path = "kres-agents"
[workspace.dependencies.kres-repl]
path = "kres-repl"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1
